--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -134,7 +134,7 @@ jobs:
 #          - qcm6490-idp
 #          - qcs615-ride
           - rb3gen2-core-kit
-          - qcs8300-ride-sx
+#          - qcs8300-ride-sx
           - qcs9100-ride-sx
           - rb1-core-kit
 #          - qcom-armv8a
