--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Download Artifacts
         uses: actions/download-artifact@v6
         with:
-          path: artifacts
+          path: test_job_summary
 
       - name: Download event file
         uses: actions/download-artifact@v6
@@ -48,24 +48,13 @@ jobs:
       - name: Prepare PR comment
         id: pr_comment_prep
         run: |
-          echo "## Test run [workflow](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})" > pr-comment.txt
-          echo "## Test jobs for commit ${{ github.event.workflow_run.head_sha }}" >> pr-comment.txt
-          for json_file in $(find ${{ github.workspace }} -name "test-job-*.json")
-          do
-              DEVICE_TYPE=$(cat "$json_file" | jq -r ".requested_device_type")
-              URL=$(cat "$json_file" | jq -r ".url")
-              JOB_ID=$(cat "$json_file" | jq -r ".id")
-              JOB_TITLE=$(cat "$json_file"| jq -r ".description")
-              echo " * [Job $JOB_ID on $DEVICE_TYPE]($URL) - ${JOB_TITLE}"
-              echo " * [Job $JOB_ID on $DEVICE_TYPE]($URL) - ${JOB_TITLE}" >> pr-comment.txt
-          done
           PR_NUMBER=$(cat "artifacts/Event File/event.json" | jq -r ".number")
           echo "pr_number=$PR_NUMBER" >> $GITHUB_OUTPUT
 
       - name: Comment on PR
         uses: thollander/actions-comment-pull-request@v3
         with:
-          file-path: pr-comment.txt
+          file-path: test_job_summary
           pr-number: ${{ steps.pr_comment_prep.outputs.pr_number }}
 
   publish-test-results:
