Add missing shell definitions to action
Signed-off-by: Milosz Wasilewski <milosz.wasilewski@gmail.com>

--- a/.github/actions/test-job-summary/action.yml
+++ b/.github/actions/test-job-summary/action.yml
@@ -24,11 +24,13 @@ runs:
           path: artifacts
 
       - name: "List files"
+        shell: bash
         run: |
           echo $GITHUB_WORKSPACE
           ls -R $GITHUB_WORKSPACE
 
       - name: Publish Test Job Details
+        shell: bash
         run: |
           INPUT=$(for TESTJOB in $(find ${{ github.workspace }} -name "${{ inputs.prefix }}.json")
           do
