Download all artifacts in test summary step
Signed-off-by: Milosz Wasilewski <milosz.wasilewski@gmail.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -239,8 +239,8 @@ jobs:
 
       - name: Download Summary
         uses: actions/download-artifact@v6
-        with:
-          path: test_job_summary
+          #        with:
+          #          path: test_job_summary
 
       - name: Publish Test Job Details
         run: |
