--- a/.github/actions/test-job-summary/action.yml
+++ b/.github/actions/test-job-summary/action.yml
@@ -12,6 +12,10 @@ inputs:
   summary_file_name:
     description: "File name that is used to save test job summary"
     default: step-summary.txt
+outputs:
+  artifact_id:
+    description: "ID of the uploaded artifact"
+    value: ${{ steps.upload-summary.outputs.artifact-id }}
 runs:
   using: "composite"
 
@@ -123,6 +127,7 @@ runs:
               echo "| [$JOB_ID]($JOB_URL) | $JOB_DEVICE_TYPE | $JOB_STATE | $JOB_HEALTH |" >> ${{inputs.summary_file_name}}
           done
       - name: Upload summary
+        id: upload-summary
         uses: actions/upload-artifact@v6
         with:
           github-token: ${{ inputs.gh_token }}
