--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,8 +7,9 @@ on:
         required: true
         type: string
     outputs:
-      description: "ID of the summary artifact"
-      summary_id: ${{ jobs.publish-test-summary.outputs.summary_id }}
+      summary_id:
+        description: "ID of the summary artifact"
+        value: ${{ jobs.publish-test-summary.outputs.summary_id }}
 
 jobs:
   prepare-boot-jobs:
