--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -50,17 +50,17 @@ jobs:
       - name: Prepare PR comment
         id: pr_comment_prep
         run: |
-          set -x
           PR_NUMBER=$(cat "artifacts/Event File/event.json" | jq -r ".number")
           RESULT_FILE_NAME=$(find ./results_summary/ -type f)
-          echo "$RESULT_FILE_NAME"
-          echo "result_file_name=${RESULT_FILE_NAME}" >> $GITHUB_OUTPUT
+          echo "## Test run [workflow](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})" > pr-comment.txt
+          echo "## Test jobs for commit ${{ github.event.workflow_run.head_sha }}" >> pr-comment.txt
+          cat "${RESULT_FILE_NAME}" >> pr-comment.txt
           echo "pr_number=$PR_NUMBER" >> $GITHUB_OUTPUT
 
       - name: Comment on PR
         uses: thollander/actions-comment-pull-request@v3
         with:
-          file-path: ${{ steps.pr_comment_prep.outputs.result_file_name }}
+          file-path: pr-comment.txt
           pr-number: ${{ steps.pr_comment_prep.outputs.pr_number }}
 
   publish-test-results:
