Temporarily disable file download in publish-results
This should simulate download failure and prevent publish-results from
creating a check on commit.

Signed-off-by: Milosz Wasilewski <milosz.wasilewski@gmail.com>

--- a/.github/workflows/publish-results.yml
+++ b/.github/workflows/publish-results.yml
@@ -27,20 +27,20 @@ jobs:
     name: "Publish Tests Results"
     runs-on: ubuntu-latest
     steps:
-      - name: Download result files
-        uses: actions/download-artifact@v6
-        with:
-            run-id: ${{ inputs.workflow_id }}
-            path: artifacts
-            github-token: ${{ github.token }}
-
-      - name: Download result files PR
-        if: ${{ github.run_id != inputs.workflow_id }}
-        uses: actions/download-artifact@v6
-        with:
-            path: artifacts
-            github-token: ${{ github.token }}
-
+#      - name: Download result files
+#        uses: actions/download-artifact@v6
+#        with:
+#            run-id: ${{ inputs.workflow_id }}
+#            path: artifacts
+#            github-token: ${{ github.token }}
+#
+#      - name: Download result files PR
+#        if: ${{ github.run_id != inputs.workflow_id }}
+#        uses: actions/download-artifact@v6
+#        with:
+#            path: artifacts
+#            github-token: ${{ github.token }}
+#
       - name: "List files"
         id: listfiles
         run: |
