Start search from current directory
Signed-off-by: Milosz Wasilewski <milosz.wasilewski@gmail.com>

--- a/.github/actions/list-jobs/action.yml
+++ b/.github/actions/list-jobs/action.yml
@@ -34,7 +34,7 @@ runs:
       id: listjobs
       shell: bash
       run: |
-        JOBFILES=$(find "${{ inputs.prefix }}*" -type f -name "*.yaml" )
+        JOBFILES=$(find "./${{ inputs.prefix }}*" -type f -name "*.yaml" )
         RESULT_JSON=$(jq -n '{target: []}')
         for J in $JOBFILES
           do
