--- a/.github/actions/list-jobs/action.yml
+++ b/.github/actions/list-jobs/action.yml
@@ -38,11 +38,11 @@ runs:
         pwd
         ls -R ./
         echo "******************************"
-        find "./${{ inputs.prefix }}*" -type f -name "*.yaml"
-        echo "******************************"
-        find ./${{ inputs.prefix }}* -type f -name "*.yaml"
-        echo "******************************"
         find . -type f -name "*.yaml"
+        echo "******************************"
+        find ${{ inputs.prefix }}* -type f -name "*.yaml"
+        echo "******************************"
+        find "./${{ inputs.prefix }}*" -type f -name "*.yaml"
         echo "******************************"
         JOBFILES=$(find "./${{ inputs.prefix }}*" -type f -name "*.yaml" )
         RESULT_JSON=$(jq -n '{target: []}')
